--- a/assets/templates/home.html
+++ b/assets/templates/home.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,800,900">
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/style.css">
-  <title>Music4You - Tha API driven music search tool</title>
+  <title>Music4You - The Artist Library & Ticket Search Engine</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
       </div>
       <div class="header-title">
         <h1>Music4You</h1>
-        <h2>Artist & Ticket Booking Search Engine</h2>
+        <h2>Artist Library & Ticket Booking Search Engine</h2>
       </div>
       <div class="header-image">
         <img src="../images/vinyl-record.png" alt="vinyl-record-img">
@@ -81,6 +81,8 @@
   <script src="../scripts/config.js"></script>
   <script src="../scripts/data_render.js"></script>
   <script src="../scripts/ticketmaster.js"></script>
+  <!-- <script src="../scripts/ticketmaster_testing.js"></script> -->
+  <script src="https://kit.fontawesome.com/6f088b358c.js" crossorigin="anonymous"></script>
   <!-- testing -->
   <!-- <script src="./assets/scripts/testing/api_drafting.js"></script> -->
   <!-- <script src="./assets/scripts/testing/discogs_images.js"></script> -->
