--- a/assets/templates/home.html
+++ b/assets/templates/home.html
@@ -30,7 +30,7 @@
   </header>
   <!-- search bar and search artist button -->
   <!-- sticky nav -->
-  <nav class="navbar navbar-expand-lg sticky-top custom-nav" id="search-area">
+  <nav class="navbar navbar-expand sticky-top custom-nav" id="search-area">
     <div class="container">
       <div class="search-title">
         <p>Build and store a collection of favourite artists...</p>
