--- a/assets/templates/home.html
+++ b/assets/templates/home.html
@@ -5,11 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="../images/png/favicon.ico">
   <link rel="stylesheet" href="../css/webfontkit-tagsExtreme/stylesheet.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,800,900">
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/style.css">
+  <script defer src="https://kit.fontawesome.com/6f088b358c.js" crossorigin="anonymous"></script>
   <title>Music4You - The Artist Library & Ticket Search Engine</title>
 </head>
 
@@ -17,14 +18,14 @@
   <header class="header">
     <div class="container">
       <div class="header-image">
-        <img src="../images/vinyl_crystal.png" alt="vinyl-record-white-img">
+        <img src="../images/png/vinyl_crystal.png" alt="vinyl-record-white-img">
       </div>
       <div class="header-title">
         <h1>Music4You</h1>
         <h2>Artist Library & Ticket Booking Search Engine</h2>
       </div>
       <div class="header-image">
-        <img src="../images/vinyl-record.png" alt="vinyl-record-img">
+        <img src="../images/png/vinyl-record.png" alt="vinyl-record-img">
       </div>
     </div>
   </header>
@@ -46,7 +47,7 @@
         </button>
       </div>
       <div class="search-title">
-        <p>find tickets to shows, access tour dates and more!</p>
+        <p>...find tickets to shows, access tour dates and more!</p>
       </div>
     </div>
   </nav>
@@ -63,9 +64,9 @@
   <!-- Footer-->
   <footer class="footer py-5 bg-dark">
     <div class="container px-4 px-lg-5 footer-tags">
-      <img src="../images/favicon.ico" alt="icon-record">
-      <p class="m-1 text-center text-white">Copyright &copy;2023 Music4You All rights reserved.</p>
-      <img src="../images/favicon.ico" alt="icon-record">
+      <img src="../images/png/favicon.ico" alt="icon-record">
+      <p class="m-1 text-center text-white">Copyright &copy;2023 Music4You. All rights reserved. Made with love.</p>
+      <img src="../images/png/favicon.ico" alt="icon-record">
       <!-- <button type="submit" class="btn ticket-button" id="ticket-button" aria-label="submit ticket-search"
       data-bs-toggle="modal" data-bs-target="#infoModalEl">
       <b>Find Tickets</b>
@@ -81,8 +82,6 @@
   <script src="../scripts/config.js"></script>
   <script src="../scripts/data_render.js"></script>
   <script src="../scripts/ticketmaster.js"></script>
-  <!-- <script src="../scripts/ticketmaster_testing.js"></script> -->
-  <script src="https://kit.fontawesome.com/6f088b358c.js" crossorigin="anonymous"></script>
   <!-- testing -->
   <!-- <script src="./assets/scripts/testing/api_drafting.js"></script> -->
   <!-- <script src="./assets/scripts/testing/discogs_images.js"></script> -->
